# roogle

./: Cargo.toml  main.rs
src/: enumdef.rs  enummap.rs  fields.rs  fnarg.rs  fnsig.rs  item.rs  loc.rs  main.rs  map.rs  search.rs  structdef.rs  structmap.rs
